# shiny-server

./: .gitignore  .travis.yml  AGENTS.md  README.md  docker-compose.yml
.github/: SECURITY.md  dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: dependency-security.md
.github/workflows/: django-lint.yml  django-tests.yml  docker-shiny.yml  docker-uwsgi.yml
django-data/: shiny_uwsgi.ini
django-data/shiny/: .coveragerc  .flake8  manage.py  pytest.ini
django-data/shiny/serve/: admin.py  apps.py  models.py  views.py
django-data/shiny/serve/fixtures/serve/: shinyapp.json  user.json
django-data/shiny/serve/migrations/: 0001_initial.py  0002_shinyapp_is_public.py  0003_shinyapp_thumbnail.py  0004_auto_20201012_1825.py  0005_alter_shinyapp_id.py  0006_shinyapp_r_version.py  0007_add_hello_shiny_app.py  0008_add_wordcloud_app.py  0009_update_showcase_apps.py  0010_alter_shinyapp_users.py  0011_alter_shinyapp_description_alter_shinyapp_is_public_and_more.py  0012_shinyapp_groups.py
django-data/shiny/serve/templates/serve/: index.html  (+3 more)
django-data/shiny/serve/tests/: test_admin.py  test_models.py  test_views.py
django-data/shiny/shiny/: markdown_utils.py  settings.py  urls.py  wsgi.py
django-data/shiny/static/css/: custom.min.css  custom.min.css.map
django-data/shiny/static/scss/: _bootswatch.scss  custom.scss
django-data/shiny/templates/: base.html
django-data/shiny/templates/includes/: javascripts.html
django-data/shiny/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
docker-entrypoint-initdb.d/: 01-create_database.sh
nginx-conf.d/: nginx-default.conf
shiny/: Dockerfile  install.r  packages.txt  polished.r  shiny-server.conf
shiny-apps/082-word-cloud/: global.R
uwsgi/: Dockerfile  pyproject.toml  requirements.txt  wait-for-mysql.sh
(+1 files in other folders)
